--- a/gapminder_analyses_demo.Rmd
+++ b/gapminder_analyses_demo.Rmd
@@ -5,18 +5,19 @@ date: "10/4/2015"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r}
-summary(cars)
-```
-
-You can also embed plots, for example:
 
 ```{r, echo=FALSE}
-plot(cars)
+#install.packages("dplyr")
+library(dplyr)               
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r read-in-data}
+gap.in <- read.table("output/combined_gapMinder.tsv", sep = "\t", header = TRUE)
+   gap.in %>%
+  select(year,pop,country,continent) %>%
+  filter(year == 2002) %>%
+  group_by(continent) %>%
+  summarise(mean = mean(pop))
+  
+```
+
